samples/_failures_safe/1761202210_2913fd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_31fac97f.c: In function ‘main’:
./samples/SAFE/__tmp_31fac97f.c:156:16: error: missing terminating " character
  156 |         printf("Failed to initialize
      |                ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_31fac97f.c:156:9: error: expected expression at end of input
  156 |         printf("Failed to initialize
      |         ^~~~~~
./samples/SAFE/__tmp_31fac97f.c:156:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_31fac97f.c:156:9: error: expected declaration or statement at end of input
